Introduce MailServerManager for modular mail server management and refactor MockedServerEngineServiceImpl to delegate responsibilities across dedicated service classes, reducing duplication and improving maintainability.